--- a/index.css
+++ b/index.css
@@ -4,5 +4,18 @@
 }
 .Card{
 	display: flex;
-	border: 25px solid red;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	margin: 80px;
+	padding:80px;
+	border: 10px solid red;
+}
+
+.information{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding-right: 20px;
+	padding-left: 80px;
 }
